--- a/index.html
+++ b/index.html
@@ -1,21 +1,9 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    <h1>나는 할 수 있다능</h1>
-    <h2>나는 닭가슴살이 좋다</h2>
-    <h3>나는 오꾸닭 순살이 좋다</h3>
-    <h4>배가 고프다</h4>
-    <img src="https://search.pstatic.net/common/?src=http%3A%2F%2Fblogfiles.naver.net%2FMjAyNDA2MTFfMjAg%2FMDAxNzE4MDQwOTg2NTMw.s3hYWf0bSfXSP42DOqP39PkK-f5mFf7tCqEY7LbGiPog.OCsXISW0HlI6ELKFPXRg-kNFA5GyLAdmqzHS0sUYMwwg.JPEG%2FIMG_8386.jpg&type=sc960_832" width=300>
+<html>
 
-    <ul>
-        <li>순살크런치</li>
-        <li>로스트그릴드</li>
-        <li>요거닭</li>
-    </ul>
-</body>
+  <body>
+
+    <h1>솔미 깃허브 테스트</h1>
+
+  </body>
+
 </html>
