--- a/index.html
+++ b/index.html
@@ -3,7 +3,22 @@
   <body>
 
     <h1>솔미 깃허브 테스트</h1>
+    <h1>나는 할 수 있다능</h1>
+    <h2>나는 닭가슴살이 좋다</h2>
+    <h3>나는 오꾸닭 순살이 좋다</h3>
+    <h4>배가 고프다</h4>
+    <h1>순살크런치는 겉바속촉 살살 녹는다</h1>
+    <img src="img/crunch.jpeg" alt="크런치" width="300">
 
+    <ul>
+        <p><b>다른 것도 맛있다</b></p>
+        <li>순살크런치</li>
+        <li>로스트그릴드</li>
+        <li>요거닭</li>
+    </ul>
+
+    <a href="www.google.com">구글로가기</a>
+    
   </body>
 
 </html>
