--- a/index.html
+++ b/index.html
@@ -1,14 +1,18 @@
-<html>
-
-  <body>
-
-    <h1>솔미 깃허브 테스트</h1>
-    <h2>나는 할 수 있다능</h2>
-    <h3>나는 닭가슴살이 좋다</h3>
-    <h4>나는 오꾸닭 순살이 좋다</h4>
-    <p>배가 고프다<p>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+  <a href="https://www.google.com/">구글로가기</a>
+<body>
+    <h1>나는 할 수 있다능</h1>
+    <h2>나는 닭가슴살이 좋다</h2>
+    <h3>나는 오꾸닭 순살이 좋다</h3>
+    <h4>배가 고프다</h4>
     <h1>순살크런치는 겉바속촉 살살 녹는다</h1>
-    <img src="img/crunch.jpeg" alt="크런치" width="300">
+    <img src="https://search.pstatic.net/common/?src=http%3A%2F%2Fblogfiles.naver.net%2FMjAyMTA3MDdfMzAw%2FMDAxNjI1NjYzNjEwOTI3.cNeDlL1s05ipOcI3iqG9t0CZMWfCMnjj1InKBerYllcg.vWbFFUvY2AD7j360rijdexBWgnJCUYglm_x6t3C0C58g.JPEG.skfo2961%2FIMG_9211.jpg&type=a340" alt="크런치" width="300">
 
     <ul>
         <p><b>다른 것도 맛있다</b></p>
@@ -17,8 +21,7 @@
         <li>요거닭</li>
     </ul>
 
-    <a href="www.google.com">구글로가기</a>
-    
-  </body>
-
+    <input type="text" placeholder="이름을 입력해주세요">
+    <button>확인</button>
+</body>
 </html>
