--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
   <h2>이미지</h2>
   <p>img 태그는 src 속성으로 이미지 주소를 넣는다.</p>
-  <img src="https://via.placeholder.com/150">
+  <img src="img/crunch.jpeg" alt="크런치 이미지" width="200">
 
   <h2>입력창과 버튼</h2>
   <p>input 태그는 사용자의 입력을 받을 때 사용한다.</p>
