--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
   <h2>이미지</h2>
   <p>img 태그는 src 속성으로 이미지 주소를 넣는다.</p>
-  <img src="img/crunch.jpeg" alt="크런치 이미지" width="200">
+  <img src="https://search.pstatic.net/common/?src=http%3A%2F%2Fblogfiles.naver.net%2FMjAxNzA2MjBfNzkg%2FMDAxNDk3OTUxNjA3ODMw.hLKqjsj_4cqeFe_2xlGgqKM4-K-EFO6MbMARsWiKsewg.WFpFp4bC3PVAck0203XBAByYzTvHmY82E_Mwgolvn9wg.JPEG.mimi130505%2FP20170616_223638924_2DA06848-F7E5-4909-B816-7E1D1C8B640E.JPG&type=a340" alt="순살크런치" width="200">
 
   <h2>입력창과 버튼</h2>
   <p>input 태그는 사용자의 입력을 받을 때 사용한다.</p>
