--- a/index.html
+++ b/index.html
@@ -1,66 +1,3 @@
-<!-- <!DOCTYPE html>
-<html>
-<head>
-  <meta charset="UTF-8">
-  <title>개발 기초 정리</title>
-</head>
-
-<body>
-
-  <h1>개발 기초 정리</h1>
-  <p>수업에서 배운 HTML 태그와 웹 기본 개념을 정리했다.</p>
-
-  <h2>HTML이란?</h2>
-  <p>
-    HTML은 웹 페이지의 구조를 만드는 언어이다.
-    제목, 문단, 이미지, 버튼 같은 요소를 화면에 배치할 수 있다.
-  </p>
-
-  <h3>수업에서 배운 태그</h3>
-  <ul>
-    <li>h1 ~ h4 : 제목</li>
-    <li>p : 문단</li>
-    <li>img : 이미지</li>
-    <li>input : 입력창</li>
-    <li>button : 버튼</li>
-    <li>ul, li : 목록</li>
-    <li>a : 링크</li>
-  </ul>
-
-  <h2>제목과 문단</h2>
-  <h3>제목 예시</h3>
-  <p>p 태그로 문단을 작성할 수 있다.</p>
-
-  <h4>소제목 예시</h4>
-  <p>제목 태그는 숫자가 커질수록 글자가 작아진다.</p>
-
-  <h2>이미지</h2>
-  <p>img 태그는 src 속성으로 이미지 주소를 넣는다.</p>
-  <img src="https://search.pstatic.net/common/?src=http%3A%2F%2Fblogfiles.naver.net%2FMjAxNzA2MjBfNzkg%2FMDAxNDk3OTUxNjA3ODMw.hLKqjsj_4cqeFe_2xlGgqKM4-K-EFO6MbMARsWiKsewg.WFpFp4bC3PVAck0203XBAByYzTvHmY82E_Mwgolvn9wg.JPEG.mimi130505%2FP20170616_223638924_2DA06848-F7E5-4909-B816-7E1D1C8B640E.JPG&type=a340" alt="순살크런치" width="200">
-
-  <h2>입력창과 버튼</h2>
-  <p>input 태그는 사용자의 입력을 받을 때 사용한다.</p>
-
-  <input type="text" placeholder="이름 입력">
-  <br>
-  <input type="email" placeholder="이메일 입력">
-  <br>
-  <button>확인</button>
-
-  <h2>링크</h2>
-  <p>a 태그는 다른 웹 페이지로 이동할 수 있게 해준다.</p>
-  <a href="https://www.google.com">구글로 이동</a>
-
-  <h2>정리</h2>
-  <p>
-    HTML은 웹 페이지의 구조를 만든다.
-    웹 페이지는 주소(URL)를 통해 불러온다.
-  </p>
-
-</body>
-</html> -->
-
-
 <!doctype html>
 <html lang="ko">
 <head>
@@ -130,14 +67,14 @@
       <h2>취미</h2>
 
       <ul>
-        <li>유튜브 TJ 노래방 반주 틀어놓고 혼자 노래 부르기</li>
-
+        <li>유튜브 TJ 노래방 반주 틀어놓고 <b>혼자 노래 부르기</b></li>
+        <small style="color: gray;"><del>원래는 친구들 지인들 불러서 집에서 파티하기 였는데 이제 다 시집 장가 갔어요</del></small>
         <li>
-          한여름에 러닝 뛰기<br>
-          <small>(불속성인가 봐요. 추울 땐 아무 데도 안 나가요…)</small>
+          한여름에 <b>러닝하기</b>(2km 정도만)<br>
+          <small style="color: gray;">(<del>불속성인가 봐요. 추울 땐 아무 데도 안 나가요…</del>)</small>
         </li>
 
-        <li>겨울엔 귤 까먹으면서 OTT 시청하기</li>
+        <li>겨울엔 귤 까먹으면서 <b>OTT 시청하기</b></li>
       </ul>
     </section>
 
@@ -179,8 +116,8 @@
       </p>
 
       <p>
-        전직장에서 <strong>해피바라, 낮잠바라, 썸머바라</strong> 캐릭터를<br>
-        굿즈로 제작해 출시한 적이 있습니다.
+        전직장에서 직접 만든 <strong>카피바라 캐릭터</strong>를<br>
+        에코백 굿즈로 제작해 출시한 적이 있습니다.
       </p>
 
       <details>
@@ -226,4 +163,3 @@
   </footer>
 </body>
 </html>
-
