--- a/index.html
+++ b/index.html
@@ -13,13 +13,15 @@
 
   <main>
     <section>
-      <h2>이름</h2>
+      <h2>이름의 의미</h2>
+      <img src="img/프로필캡쳐.png" alt="프로필 사진" width="150" />
       <p>안녕하세요! 박솔미입니다.</p>
 
       <p>
-        제 이름 예쁘죠?<br>
+        제 이름 꽤 예쁘지 않나요?<br>
         한글 이름 같지만, 의외로 한자 이름이에요.<br>
-        센스 넘치는 외할머니가 직접 지어주셨어요.
+        센스 넘치는 외할머니가 직접 지어주셨어요.<br>
+        미를 거느린다는 뜻인데 디자이너랑 잘 맞지 않나요? ㅎㅎ
       </p>
 
       <ul>
@@ -42,7 +44,7 @@
       <p>
         저는 대문자 T입니다.<br>
         여러분, T는 죄가 아닙니다..!<br>
-        <del>멸시받던 이 세상 모든 T들아 모여라</del>
+        <small style="color: gray;"><del>멸시받던 이 세상 모든 T들아 모여라</del></small>
       </p>
 
       <p>
