--- a/index.html
+++ b/index.html
@@ -111,6 +111,29 @@
     <hr>
 
     <section>
+  <h2>짧고 명료한게 좋아요</h2>
+
+  <p>
+    길고 복잡한 문장을<br>
+    짧고 이해하기 쉽게 줄이는 걸 잘하는 것 같아요.
+  </p>
+
+  <p>
+    개인적으로도 이런 작업을 좋아하고,<br>
+    회사에 다닐 때는 브랜드 스토리나 문구를 정리하는 일을 자주 했어요.
+  </p>
+
+  <p>
+    그래서인지 <br>
+    센스 있는 카피라이팅 작업도 좋아해요. <br>
+    생각이 안 날 땐 정말 고통스럽지만요... ㅎㅎㅎ
+  </p>
+
+<hr>
+
+</section>
+
+    <section>
       <h2>역시 귀여운 게 최고야</h2>
 
       <p>
