Update alt text for profile image in index.html

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <main>
     <section>
       <h2>이름의 의미</h2>
-      <img src="img/프로필캡쳐.png" alt="프로필 사진" width="150" />
+      <img src="img/프로필캡쳐.png" alt="프로필 캡쳐 이미지" width="150" />
       <p>안녕하세요! 박솔미입니다.</p>
 
       <p>
